--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" href="./css/index.css" />
   <script src="js/base.js"></script>
-  <title>福灯</title>
+  <title>福灯1</title>
 </head>
 
 <body>
