--- a/index.html
+++ b/index.html
@@ -1,80 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- 声明文档使用的字符编码 -->
+    <meta charset="utf-8" />
+    <!-- 优先使用 IE 最新版本和 Chrome -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="wap-font-scale" content="no" />
 
-<head>
-  <meta charset="UTF-8" />
-  <!-- 声明文档使用的字符编码 -->
-  <meta charset="utf-8" />
-  <!-- 优先使用 IE 最新版本和 Chrome -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="wap-font-scale" content="no" />
+    <!-- 页面描述 -->
+    <meta name="description" content="不超过150个字符" />
+    <!-- 页面关键词 -->
+    <meta name="keywords" content="" />
+    <!-- 网页作者 -->
+    <meta name="author" content="name, email@gmail.com" />
+    <!-- 搜索引擎抓取 -->
+    <meta name="robots" content="index,follow" />
+    <!-- 为移动设备添加 viewport -->
+    <meta
+      name="viewport"
+      content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no"
+    />
+    <!-- `width=device-width` 会导致 iPhone 5 添加到主屏后以 WebApp 全屏模式打开页面时出现黑边 http://bigc.at/ios-webapp-viewport-meta.orz -->
 
-  <!-- 页面描述 -->
-  <meta name="description" content="不超过150个字符" />
-  <!-- 页面关键词 -->
-  <meta name="keywords" content="" />
-  <!-- 网页作者 -->
-  <meta name="author" content="name, email@gmail.com" />
-  <!-- 搜索引擎抓取 -->
-  <meta name="robots" content="index,follow" />
-  <!-- 为移动设备添加 viewport -->
-  <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no" />
-  <!-- `width=device-width` 会导致 iPhone 5 添加到主屏后以 WebApp 全屏模式打开页面时出现黑边 http://bigc.at/ios-webapp-viewport-meta.orz -->
+    <!-- iOS 设备 begin -->
+    <meta name="apple-mobile-web-app-title" content="标题" />
+    <!-- 添加到主屏后的标题（iOS 6 新增） -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
 
-  <!-- iOS 设备 begin -->
-  <meta name="apple-mobile-web-app-title" content="标题" />
-  <!-- 添加到主屏后的标题（iOS 6 新增） -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
+    <meta
+      name="apple-itunes-app"
+      content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL"
+    />
+    <!-- 添加智能 App 广告条 Smart App Banner（iOS 6+ Safari） -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- 设置苹果工具栏颜色 -->
+    <meta name="format-detection" content="telphone=no, email=no" />
+    <!-- 忽略页面中的数字识别为电话，忽略email识别 -->
+    <!-- 启用360浏览器的极速模式(webkit) -->
+    <meta name="renderer" content="webkit" />
+    <!-- 避免IE使用兼容模式 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- 不让百度转码 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
+    <meta name="HandheldFriendly" content="true" />
+    <!-- 微软的老式浏览器 -->
+    <meta name="MobileOptimized" content="320" />
+    <!-- uc强制竖屏 -->
+    <meta name="screen-orientation" content="portrait" />
+    <!-- QQ强制竖屏 -->
+    <meta name="x5-orientation" content="portrait" />
+    <!-- UC强制全屏 -->
+    <meta name="full-screen" content="yes" />
+    <!-- QQ强制全屏 -->
+    <meta name="x5-fullscreen" content="true" />
+    <!-- UC应用模式 -->
+    <meta name="browsermode" content="application" />
+    <!-- QQ应用模式 -->
+    <meta name="x5-page-mode" content="app" />
+    <!-- windows phone 点击无高光 -->
+    <meta name="msapplication-tap-highlight" content="no" />
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="js/base.js"></script>
+    <title>福灯1</title>
+  </head>
 
-  <meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL" />
-  <!-- 添加智能 App 广告条 Smart App Banner（iOS 6+ Safari） -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <!-- 设置苹果工具栏颜色 -->
-  <meta name="format-detection" content="telphone=no, email=no" />
-  <!-- 忽略页面中的数字识别为电话，忽略email识别 -->
-  <!-- 启用360浏览器的极速模式(webkit) -->
-  <meta name="renderer" content="webkit" />
-  <!-- 避免IE使用兼容模式 -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- 不让百度转码 -->
-  <meta http-equiv="Cache-Control" content="no-siteapp" />
-  <!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
-  <meta name="HandheldFriendly" content="true" />
-  <!-- 微软的老式浏览器 -->
-  <meta name="MobileOptimized" content="320" />
-  <!-- uc强制竖屏 -->
-  <meta name="screen-orientation" content="portrait" />
-  <!-- QQ强制竖屏 -->
-  <meta name="x5-orientation" content="portrait" />
-  <!-- UC强制全屏 -->
-  <meta name="full-screen" content="yes" />
-  <!-- QQ强制全屏 -->
-  <meta name="x5-fullscreen" content="true" />
-  <!-- UC应用模式 -->
-  <meta name="browsermode" content="application" />
-  <!-- QQ应用模式 -->
-  <meta name="x5-page-mode" content="app" />
-  <!-- windows phone 点击无高光 -->
-  <meta name="msapplication-tap-highlight" content="no" />
-  <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="./css/index.css" />
-  <script src="js/base.js"></script>
-  <title>福灯1</title>
-</head>
-
-<body>
-  <div class="header">
-    <view class="active">客家风俗</view>
-    <view>客家美食</view>
-    <view>客家渊源</view>
-  </div>
-  <div class="nav">
-    我的粉丝
-  </div>
-  <div id="app"></div>
-</body>
-
+  <body>
+    <div class="header">
+      <view class="active">客家风俗</view>
+      <view>客家美食</view>
+      <view>客家渊源</view>
+    </div>
+    <div class="nav">
+      我的粉丝
+    </div>
+    <div id="app"></div>
+  </body>
 </html>
 <script>
   $(() => {
@@ -103,6 +107,40 @@
       $(".nav").show();
       $(".header").hide();
       $("#app").load("./pages/advice.html");
+    }
+
+    if (code == 7) {
+      $(".nav").show();
+      $(".header").hide();
+      $("#app").load("./pages/view-records.html");
+    }
+
+    if (code == 8) {
+      $(".nav").show();
+      $(".header").hide();
+      $("#app").load("./pages/discover.html");
+    }
+    
+    if (code == 9) {
+      $(".nav").show();
+      $(".header").hide();
+      $("#app").load("./pages/share.html");
+    }
+    
+    if (code == 10) {
+      $(".nav").hide();
+      $(".header").hide();
+      $("#app").load("./pages/fd.html");
+    }
+    if (code == 11) {
+      $(".nav").show();
+      $(".header").hide();
+      $("#app").load("./pages/user.html");
+    }
+    if (code == 12) {
+      $(".nav").show();
+      $(".header").hide();
+      $("#app").load("./pages/userInfo.html");
     }
   });
 </script>
