--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
       $(".header").hide();
       $("#app").load("./pages/discover.html");
     }
-    
+
     if (code == 9) {
       $(".nav").show();
       $(".header").hide();
       $("#app").load("./pages/share.html");
     }
-    
+
     if (code == 10) {
       $(".nav").hide();
       $(".header").hide();
@@ -141,6 +141,33 @@
       $(".nav").show();
       $(".header").hide();
       $("#app").load("./pages/userInfo.html");
+    }
+
+    if (code == 13) {
+      $(".nav").hide();
+      $(".header").hide();
+      $("#app").load("./pages/dlkj.html");
+    }
+    if (code == 14) {
+      $(".nav").hide();
+      $(".header").hide();
+      $("#app").load("./pages/dlkj1.html");
+    }
+    if (code == 15) {
+      $(".nav").hide();
+      $(".header").hide();
+      $("#app").load("./pages/dlkj2.html");
+    }
+
+    if (code == 16) {
+      $(".nav").show();
+      $(".header").hide();
+      $("#app").load("./pages/detail.html");
+    }
+    if (code == 17) {
+      $(".nav").show();
+      $(".header").hide();
+      $("#app").load("./pages/msgNotice.html");
     }
   });
 </script>
