--- a/pages/view-records.html
+++ b/pages/view-records.html
@@ -22,19 +22,14 @@
     <div class="util1">
       <div><img src="images/icon-zan.png" alt="" />12</div>
       <div><img src="images/Icon-comment-alt.png" alt="" />14</div>
+      <div class="jy">
+        <img
+          src="http://img1.imgtn.bdimg.com/it/u=2369017631,3935728806&fm=26&gp=0.jpg"
+          alt=""
+        />
+      </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
 
   <div class="foot">
     <div class="util">
