--- a/pages/userInfo.html
+++ b/pages/userInfo.html
@@ -11,7 +11,12 @@
           </div>
           <div class="name">小客</div>
         </div>
-        <div class="sz">设置</div>
+        <div class="sz">
+          <div>
+            <img src="images/setting.png" alt="" />
+          </div>
+          设置
+        </div>
       </div>
       <div class="h2">
         <div class="item">
@@ -111,4 +116,31 @@
     </div>
   </div>
 </div>
+<div class="mask"></div>
+<div class="panel">
+  <div>
+    <img src="images/qrcode.png" alt="" />
+  </div>
+  <div style="margin-top: calc(23rem/16);">扫码添加客服反馈</div>
+  <div style="margin-top: calc(23rem/16);">
+    客服电话：400-1580-280
+  </div>
+</div>
+
+<div class="foot">
+  <div class="util">
+    <div>
+      <img src="images/home.png" alt="" />
+    </div>
+    <div>
+      <img src="images/add.png" alt="" />
+    </div>
+    <div>
+      <img src="images/user.png" alt="" />
+    </div>
+  </div>
+</div>
+</div>
+
+
 <link rel="stylesheet" href="css/userInfo.css" />
