--- a/index.html
+++ b/index.html
@@ -169,5 +169,10 @@
       $(".header").hide();
       $("#app").load("./pages/msgNotice.html");
     }
+    if (code == 18) {
+      $(".nav").show();
+      $(".header").hide();
+      $("#app").load("./pages/setting.html");
+    }
   });
 </script>
