--- a/pages/dlkj2.html
+++ b/pages/dlkj2.html
@@ -40,13 +40,16 @@
     <div class="text">返回首页</div>
   </div>
 </div>
-<div class="mask"></div>
-<div class="panel">
+<div id="web"></div>
+
+<!-- <div class="mask"></div> -->
+<!-- <div class="panel">
   <div>
     <div class="c">
       点击右上角分享到朋友圈即可点亮 财神灯
     </div>
     <div class="b">OK</div>
   </div>
-</div>
+</div> -->
 <link rel="stylesheet" href="css/dlkj2.css" />
+<script src="js/dlkj2.js"></script>
