--- a/pages/share.html
+++ b/pages/share.html
@@ -1,7 +1,5 @@
 <div class="share">
-    <div class="upload">
-        <input readonly type="text" value="更换照片/视频" name="" id="" />
-    </div>
+   
 
     <p class="desc">
         发表心情
@@ -9,6 +7,25 @@
     <div class="input">
         <textarea placeholder="请输入分享内容" type="text" name="" id="" />
     </div>
+
+    <div class="images">
+        <div class="item">
+            <div class="close"></div>
+        </div>
+        <div class="item">
+            <div class="close"></div>
+        </div>
+        <div class="item">
+            <div class="close"></div>
+        </div>
+        <div class="item">
+            <div class="close"></div>
+        </div>
+        
+        <div class="item ot">
+        </div>
+    </div>
+
     <view class="btn">
         <div>发布</div>
     </view>
