--- a/pages/view-records.html
+++ b/pages/view-records.html
@@ -24,7 +24,7 @@
       <div><img src="images/Icon-comment-alt.png" alt="" />14</div>
       <div class="jy">
         <img
-          src="http://img1.imgtn.bdimg.com/it/u=2369017631,3935728806&fm=26&gp=0.jpg"
+          src="images/zl.png"
           alt=""
         />
       </div>
