--- a/pages/discover.html
+++ b/pages/discover.html
@@ -54,7 +54,10 @@
   </div>
 
   <div class="gray">
-    <div class="active">热门动态</div>
+    <div class="active">热门动态
+      <div class="redbg"></div>
+
+    </div>	
     <div>最新动态</div>
     <div>查看更多</div>
   </div>
@@ -111,6 +114,12 @@
       <div class="util1">
         <div><img src="images/icon-zan.png" alt="" />12</div>
         <div><img src="images/Icon-comment-alt.png" alt="" />14</div>
+        <div class="jy">
+          <img
+            src="images/zl.png"
+            alt=""
+          />
+        </div>
       </div>
       <div class="gl"></div>
     </div>
