--- a/pages/setting.html
+++ b/pages/setting.html
@@ -1,83 +1,102 @@
 <div class="set">
-  <div class="item upload">
-    <div>头像</div>
-    <div>
-      <div class="img"></div>
-      <div style="font-size: 1.5rem;">></div>
-    </div>
-  </div>
+	<div class="item upload">
+		<div>头像</div>
+		<div>
+			<div class="img"></div>
+			<div class="right" style="font-size: 1.5rem;">
+				<img src="images/right.png" >
+			</div>
+		</div>
+	</div>
 
-  <div class="item ">
-    <div>昵称</div>
-    <div>
-      <div class="">流沙包</div>
-      <div style="font-size: 1.5rem;">></div>
-    </div>
-  </div>
-  <div class="gl"></div>
+	<div class="item ">
+		<div>昵称</div>
+		<div>
+			<div class="">流沙包</div>
+			<div class="right" style="font-size: 1.5rem;">
+				<img src="images/right.png" >
+			</div>
+		</div>
+	</div>
+	<div class="gl"></div>
 
-  <div class="item ">
-    <div>姓名</div>
-    <div>
-      <div class="">钟晓东</div>
-      <div style="font-size: 1.5rem;">></div>
-    </div>
-  </div>
+	<div class="item ">
+		<div>姓名</div>
+		<div>
+			<div class="">钟晓东</div>
+			<div class="right" style="font-size: 1.5rem;">
+				<img src="images/right.png" >
+			</div>
+		</div>
+	</div>
 
-  <div class="item ">
-    <div>手机号</div>
-    <div>
-      <div class="">155*****123</div>
-      <div style="font-size: 1.5rem;">></div>
-    </div>
-  </div>
+	<div class="item ">
+		<div>手机号</div>
+		<div>
+			<div class="">155*****123</div>
+			<div class="right" style="font-size: 1.5rem;">
+				<img src="images/right.png" >
+			</div>
+		</div>
+	</div>
 
-  <div class="item ">
-    <div>修改密码</div>
-    <div>
-      <div class=""></div>
-      <div style="font-size: 1.5rem;">></div>
-    </div>
-  </div>
+	<div class="item ">
+		<div>修改密码</div>
+		<div>
+			<div class=""></div>
+			<div class="right" style="font-size: 1.5rem;">
+				<img src="images/right.png" >
+			</div>
+		</div>
+	</div>
 
-  <div class="gl"></div>
+	<div class="gl"></div>
 
-  <div class="item off" >
-    <div>生日</div>
-    <div>
-      <div class="wz">收获生日惊喜</div>
-      <div style="font-size: 1.5rem;">></div>
-    </div>
-  </div>
+	<div class="item off">
+		<div>生日</div>
+		<div>
+			<div class="wz">收获生日惊喜</div>
+			<div class="right" style="font-size: 1.5rem;">
+				<img src="images/right.png" >
+			</div>
+		</div>
+	</div>
 
-  <div class="item off">
-    <div>性别</div>
-    <div>
-      <div class="sex">
-        <div>男</div>
-        <div>女</div>
-      </div>
-    </div>
-  </div>
+	<div class="item off">
+		<div>性别</div>
+		<div>
+			<div class="sex">
+				<div>					<div></div>
+					<img src="images/boy.png">
+					男<div></div></div>
+				<div>					<div></div><img src="images/girl.png">
+					女<div></div></div>
+			</div>
+		</div>
+	</div>
 
-  <div class="item off">
-    <div>邮箱</div>
-    <div>
-      <div class="wz">接受通知</div>
-      <div style="font-size: 1.5rem;">></div>
-    </div>
-  </div>
+	<div class="item off">
+		<div>邮箱</div>
+		<div>
+			<div class="wz">接受通知</div>
+			<div class="right">
+				<img src="images/right.png" >
+			</div>
+		</div>
+	</div>
 
-  <div class="item off">
-    <div>常住地</div>
-    <div>
-      <div class="wz">为你推荐</div>
-      <div style="font-size: 1.5rem;">></div>
-    </div>
-  </div>
+	<div class="item off">
+		<div>常住地</div>
+		<div>
+			<div class="wz">为你推荐</div>
+			<div class="right" style="font-size: 1.5rem;">
+				<img src="images/right.png" >
+			</div>
+		</div>
+	</div>
 
-  <div class="gl"></div>
-  <div class="btn">退出登录</div>
+	<div class="gl"></div>
+	<div class="btn">退出登录</div>
 </div>
 
 <link rel="stylesheet" href="css/setting.css" />
